crates/python_parser/src/parser/tests/snapshots/python_parser__parser__tests__function__tests__lambda_no_args.snap
---
source: crates/python_parser/src/parser/tests/function.rs
expression: parse_ast
---
(
    [
        Expr(
            ExprStmt {
                range: 0..9,
                value: Lambda(
                    LambdaExpr {
                        range: 0..9,
                        parameters: None,
                        body: NumberLiteral(
                            NumberLiteralExpr {
                                range: 8..9,
                                value: Int(
                                    1,
                                ),
                            },
                        ),
                    },
                ),
            },
        ),
    ],
    [],
)
